bugs squashed- login hangup, button multiclicks, side list formatting

--- a/app/components/aside/aside.css
+++ b/app/components/aside/aside.css
@@ -21,8 +21,8 @@
 .aside-list li {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 18px;
-	padding: 2px;
+	padding: 4px;
 	margin: 1px;
-	margin-top: 10px;
+	margin-top: 15px;
 	border-bottom: 1px solid white;
 }
