--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -19,6 +19,11 @@
 	padding: 15px;
 	border-radius: 50px;
 	background-color: #B1D84C;
+	border: 2px solid #C48832;
+	transition: box-shadow 0.5s ease;
+}
+.login-button:hover {
+	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
 }
 .login-modal {
 	padding: 6px;
@@ -39,7 +44,12 @@
 	padding: 15px;
 	border-radius: 50px;
 	background-color: #B1D84C;
+	border: 2px solid #C48832;
 	height: 20px;
+	transition: box-shadow 0.5s ease;
+}
+.user-info:hover {
+	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
 }
 .user-info-modal {
 	display: flex;
